--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 body {
     padding: 1rem;
 }
+
+.article {
+    width: 320px;
+    margin-bottom: 32px;
+}
+
+.article-text {
+    color: #F26419;
+}
